--- a/hris-frontend/package.json
+++ b/hris-frontend/package.json
@@ -10,19 +10,24 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "file-saver": "^2.0.5",
+    "file-server": "^2.2.1",
     "next": "^15.3.2",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/xlsx": "^0.0.36",
     "eslint": "^9",
     "eslint-config-next": "15.3.1"
   }
