--- a/hris-frontend/package.json
+++ b/hris-frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "cookies-next": "^6.0.0",
     "file-saver": "^2.0.5",
     "file-server": "^2.2.1",
     "lucide-react": "^0.512.0",
@@ -28,7 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/xlsx": "^0.0.36",
+    "@types/xlsx": "^0.0.35",
     "eslint": "^9",
     "eslint-config-next": "15.3.1"
   }
