--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: Continuous Delivery
 
 on:
   push:
-    branches: [main, master]
+    branches: [patch]
 
 jobs:
   deploy:
@@ -19,6 +19,7 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd ./hris
-            git pull origin main || git pull origin master
+            git pull origin main || git pull origin patch
+            docker compose down --remove-orphans
             docker compose build --no-cache
             docker compose up -d --remove-orphans
