--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Continuous Integration
 
 on:
   push:
-    branches: [main, master]
+    branches: [patch]
   pull_request:
-    branches: [main, master]
+    branches: [patch]
 
 jobs:
   backend-tests:
