--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,10 +58,10 @@ jobs:
         run: |
           cd hris-frontend
           npm ci
-      - name: Run frontend lint
+      - name: Run frontend build
         run: |
           cd hris-frontend
-          npm run lint
+          npm run build -- --no-lint
       - name: Run frontend tests
         run: |
           cd hris-frontend
