--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Deploy, build, and run on server via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -19,7 +20,12 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd ./hris
-            git pull origin main || git pull origin patch
+            git fetch origin patch
+
+            # Setting the environment variables
+            bash scripts/setup-backend-env.sh
+
+            # Stopping and removing existing containers, building, and starting new containers
             docker compose down --remove-orphans
             docker compose build --no-cache
-            docker compose up -d --remove-orphans
+            docker compose up -d
