--- a/hris-frontend/package.json
+++ b/hris-frontend/package.json
@@ -12,12 +12,13 @@
     "@radix-ui/react-slot": "^1.2.3",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
-    "cookies-next": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^6.0.0",
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "file-server": "^2.2.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.512.0",
     "next": "^15.3.2",
     "react": "^19.0.0",
@@ -25,7 +26,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
-    "sweetalert2": "^11.22.0",
+    "sweetalert2": "^11.6.13",
     "tailwind-merge": "^3.3.0",
     "xlsx": "^0.18.5"
   },
@@ -34,6 +35,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/aos": "^3.0.7",
     "@types/file-saver": "^2.0.7",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
