--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - "3005:3000"
     env_file:
       - ./hris-frontend/.env
+    environments:
+      - NODE_ENV=production
+      - NEXT_PUBLIC_API_BASE_URL=https://api.hristeam11.web.id/api
     networks:
       - hris_network
     depends_on:
