fix: correct environment key in frontend service of docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: hris-frontend
     ports:
       - "3005:3000"
-    environments:
+    environment:
       - NODE_ENV=production
       - NEXT_PUBLIC_API_BASE_URL=https://api.hristeam11.web.id/api
     networks:
