--- a/hris-backend/composer.json
+++ b/hris-backend/composer.json
@@ -3,7 +3,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
@@ -11,9 +14,8 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
-        "maatwebsite/excel": "^3.1"
-        "laravel/socialite": "^5.21",
-        "laravel/tinker": "^2.10.1"
+        "maatwebsite/excel": "^3.1",
+        "laravel/socialite": "^5.21"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
