fix: include zip extension in Dockerfile for PHP installation

--- a/hris-backend/Dockerfile
+++ b/hris-backend/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
     curl \
     libpq-dev \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install gd pdo pdo_pgsql pgsql
+    && docker-php-ext-install gd pdo pdo_pgsql pgsql zip
 
 WORKDIR /var/www
 
