--- a/hris-backend/Dockerfile
+++ b/hris-backend/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update && apt-get install -y \
     libpng-dev \
     libjpeg-dev \
     libfreetype6-dev \
+    libzip-dev \
     zip \
     git \
     unzip \
