--- a/hris-backend/composer.json
+++ b/hris-backend/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
         "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1"
     },
